--- a/index.html
+++ b/index.html
@@ -141,40 +141,79 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h3 class="top-title">Projects</h3>
 				<span class="line"></span>
 				<div class="row skill-grids text-center">
-									<div class="col-md-3 skill-column">	
-										<div class="skill-grid">
-											<div class="circle" id="circles-1"></div>			
-											 <img src="./images/book.png" alt=""/>						
-											 <h3>PHOTOSHOP</h3>	
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-										 </div>								  
-									</div>
-									<div class="col-md-3 skill-column">	
-										<div class="skill-grid">
-											<div class="circle" id="circles-2"></div>	
-											<img src="./images/book.png" alt=""/>								
-											 <h3>ILLUSTRATOR</h3>	
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-										 </div>								  
-									</div>
-									<div class="col-md-3 skill-column">	
-										<div class="skill-grid">
-											<div class="circle" id="circles-3"></div>	
-											<img src="./images/book.png" alt=""/>								
-											 <h3>HTML/CSS</h3>	
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-										 </div>								  
-									</div>
-									<div class="col-md-3 skill-column">	
-										<div class="skill-grid">
-											<div class="circle" id="circles-4"></div>	
-											<img src="./images/book.png" alt=""/>								
-											 <h3>JAVASCRIPT</h3>
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>	
-										 </div>								  
-									</div>
-									<div class="clearfix"> </div>
-					          </div>
+
+					<!-- Rerson Re-Identification -->
+					<div class="col-md-3 skill-column">	
+						<div class="skill-grid">
+							<div class="circle" id="circles-1"></div>			
+							<img src="./images/ReID.jpg" alt=""/>			
+							<h3>Pedestrain<br/>Re-Identification</h3>	
+							<p>A Person Re-Identification System in Python and C++</p>
+							<p>Github: <a href="https://luotianqi.github.io/Personal-Website/">https://luotianqi.github.io/Personal-Website/</a></p>
+						</div>								  
+					</div>
+
+
+					<!-- crowd counting -->
+					<div class="col-md-3 skill-column">	
+						<div class="skill-grid">
+							<div class="circle" id="circles-1"></div>			
+							<img src="./images/Unet.jpg" alt=""/>						
+							<h3>Crowd-Counting</h3>	
+							<p>Single-Image Crowd-Counting System in Python, using generative adversarial net</p>
+							<p>Github: the project is undergoing and the code is not public right now</p>
+						</div>								  
+					</div>
+
+					<!-- Git Lite -->
+					<div class="col-md-3 skill-column">	
+						<div class="skill-grid">
+							<div class="circle" id="circles-1"></div>			
+							<img src="./images/GitLite.jpg" alt=""/>						
+							<h3>Git-Lite</h3>	
+							<p>an implementation of Git in Java</p>
+							<p>Github: <a href="https://github.com/LuoTianqi/GitLite">https://github.com/LuoTianqi/GitLite</a></p>
+						</div>								  
+					</div>
+
+					<!-- music equalizer-->
+					<div class="col-md-3 skill-column">	
+						<div class="skill-grid">
+							<div class="circle" id="circles-1"></div>			
+							<img src="./images/ME.jpg" alt=""/>						
+							<h3>Music Equalizer</h3>	
+							<p>A Music Equalizer and Visualization Tool in Matlab</p>
+							<p>Github: <a href="https://github.com/LuoTianqi/music-equalizer">https://github.com/LuoTianqi/music-equalizer</a></p>
+						</div>								  
+					</div>
+
+				</div>
+
+				<div class="row skill-grids text-center">
+					<div class="col-md-3 skill-column">	
+						<div class="skill-grid">
+							<div class="circle" id="circles-1"></div>			
+							<img src="./images/cat.jpg" alt=""/>			
+							<h3>Funny C Compiler</h3>	
+							<p>A C Compiler in C. It sounds ridiculous and I know :) </p>
+							<p>Github: <a href="https://github.com/LuoTianqi/FunnyCompiler">https://github.com/LuoTianqi/FunnyCompiler</a></p>
+						</div>								  
+					</div>
+
+					<!-- FPGA beat master-->
+					<div class="col-md-3 skill-column">	
+						<div class="skill-grid">
+							<div class="circle" id="circles-1"></div>			
+							<img src="./images/BeatMaster.jpg" alt=""/>						
+							<h3>FPGA-MusicGame</h3>	
+							<p>A Beat Master Music Game</p>
+							<p>Github: <a href="https://github.com/john-junhong/FPGA-MusicGame">https://github.com/john-junhong/FPGA-MusicGame</a></p>
+						</div>								  
+					</div>
+					
+				</div>
+
+
 		</div>
 	</div>
 
