--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<p><br/></p>
 	<div class="header-top">
 				<h2>Luo Tianqi</h2>
-				<small>Undergraduate Student of EECS<br>Wuhan, China</small>
+				<small>Undergraduate Student<br>Huazhong University of Science and Technology</small>
 	</div>
 	<!-- Header Ends Here ---->
 	<!-- About Me Starts Here -->
@@ -40,7 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="about-top">
 				<h3 class="top-title">Home</h3>
 				<span class="line"></span>
-				<p class="about-p" style="text-align: center">Hi ! I am a student from Huazhong University of Science and Technology in China. </p>
+				<p class="about-p" style="text-align: center">Hi ! I am a undergraduate student studying EECS. </p>
 <!--				<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum</p>
 -->
 				<div class="row about-row">
