--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<p><br/></p>
 	<div class="header-top">
 				<h2>Luo Tianqi</h2>
-				<small>Undergraduate Student<br>Huazhong University of Science and Technology</small>
+				<small>Huazhong University of Science and Technology</small>
 	</div>
 	<!-- Header Ends Here ---->
 	<!-- About Me Starts Here -->
