--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="about-top">
 				<h3 class="top-title">Home</h3>
 				<span class="line"></span>
-				<p class="about-p" style="text-align: center">Hi ! I am a undergraduate student studying EECS. </p>
+				<p class="about-p" style="text-align: center">Hi ! I'm an undergraduate student studying EECS. </p>
 <!--				<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum</p>
 -->
 				<div class="row about-row">
