--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul class="about-details">
 							<li><p>Birthday: <span>3/7/1997</span></p></li>
 							<li><p>Phone: <span>+86 13554193774</span></p></li>
-							<li><p>Email:  <span>luotianqi@hust.edu.cn</a></span></p></li>
+							<li><p>Email:  <span><p>luotianqi [at] hust [dot] edu [dot] cn</span></p></p></li>
 							<li><p>Website: <span><a href="https://luotianqi.github.io/Personal-Website/">https://luotianqi.github.io/Personal-Website/</a></span></p></li>
 						</ul>
 					</div>
@@ -235,7 +235,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-md-4 contact-column">
 						<i class="mail"></i>
-						<p><a href="mailto:example@gmail.com">luotianqi@hust.edu.cn</a></p>
+						<p>luotianqi [at] hust [dot] edu [dot] cn</p>
 					</div>
 					<div class="col-md-4 contact-column">
 						<i class="phone"></i>
