--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="./images/ReID.jpg" alt=""/>			
 							<h3>Pedestrain<br/>Re-Identification</h3>	
 							<p>A Person Re-Identification System in Python and C++</p>
-							<p>Github: <a href="https://luotianqi.github.io/Personal-Website/">https://luotianqi.github.io/Personal-Website/</a></p>
+							<p>Github: <a href="https://github.com/john-junhong/Person-Reidentification-System">https://github.com/john-junhong/Person-Reidentification-System</a></p>
 						</div>								  
 					</div>
 
