--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><p>Birthday: <span>3/7/1997</span></p></li>
 							<li><p>Phone: <span>+86 13554193774</span></p></li>
 							<li><p>Email:  <span>luotianqi@hust.edu.cn</span></p></li>
-							<li><p>Website: <span><a href="https://luotianqi.github.io/Personal-Website/">https://luotianqi.github.io/Personal-Website/</a></span></p></li>
+							<li><p>Website: <span><a href="https://luotianqi.github.io/Home/">https://luotianqi.github.io/Home/</a></span></p></li>
 						</ul>
 					</div>
 					<div class="col-md-8 about-row-column">
